removed img from top menu

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Calibration tool for Lisflood"
+title                    : "Calibration tool"
 title_separator          : "-"
 name                     : "JRC E1"
 description              : "User guide for the Calibration tool"
