--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -234,7 +234,9 @@ defaults:
       - section_title: "Introduction"
         items:
         - title: "- About"
-          url: 1_introduction
+          url: 1_about
+        - title: "- LISFLOOD calibration"
+          url: 1_calibration
 
       - section_title: "Setup"
         items:
@@ -247,8 +249,6 @@ defaults:
         items:
         - title: "- Configuration files and static input data"
           url: 3_data
-        - title: "- First steps"
-          url: 3_first
         - title: "- Execute main calibration script"
           url: 3_execute
 
