adding API documentation

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -252,4 +252,9 @@ defaults:
         - title: "- Execute main calibration script"
           url: 3_execute
 
+      - section_title: "API"
+        items:
+        - title: "- liscal"
+          url: 4_api
+
 theme: jekyll-theme-minimal
